List: newer Java API/syntax